--- a/docs/index.css
+++ b/docs/index.css
@@ -1164,18 +1164,6 @@ input:checked + .toggle-bg {
   margin-top: 9rem;
 }
 
-.mt-14 {
-  margin-top: 3.5rem;
-}
-
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-
-.mb-4 {
-  margin-bottom: 1rem;
-}
-
 .mb-8 {
   margin-bottom: 2rem;
 }
@@ -1184,12 +1172,12 @@ input:checked + .toggle-bg {
   margin-top: 16rem;
 }
 
-.mb-1 {
-  margin-bottom: 0.25rem;
+.mb-2 {
+  margin-bottom: 0.5rem;
 }
 
-.mt-12 {
-  margin-top: 3rem;
+.mb-1 {
+  margin-bottom: 0.25rem;
 }
 
 .block {
@@ -1236,14 +1224,12 @@ input:checked + .toggle-bg {
   height: 1.25rem;
 }
 
-.h-12 {
-  height: 3rem;
+.h-52 {
+  height: 13rem;
 }
 
-.h-min {
-  height: -webkit-min-content;
-  height: -moz-min-content;
-  height: min-content;
+.h-24 {
+  height: 6rem;
 }
 
 .h-28 {
@@ -1260,20 +1246,6 @@ input:checked + .toggle-bg {
 
 .h-4 {
   height: 1rem;
-}
-
-.h-52 {
-  height: 13rem;
-}
-
-.h-24 {
-  height: 6rem;
-}
-
-.min-h-max {
-  min-height: -webkit-max-content;
-  min-height: -moz-max-content;
-  min-height: max-content;
 }
 
 .w-11\/12 {
@@ -1302,16 +1274,12 @@ input:checked + .toggle-bg {
   width: max-content;
 }
 
+.w-3\/4 {
+  width: 75%;
+}
+
 .w-1\/2 {
   width: 50%;
-}
-
-.w-full {
-  width: 100%;
-}
-
-.w-5\/12 {
-  width: 41.666667%;
 }
 
 .w-64 {
@@ -1322,22 +1290,10 @@ input:checked + .toggle-bg {
   width: 1rem;
 }
 
-.w-3\/4 {
-  width: 75%;
-}
-
 .w-min {
   width: -webkit-min-content;
   width: -moz-min-content;
   width: min-content;
-}
-
-.w-1\/6 {
-  width: 16.666667%;
-}
-
-.w-3\/5 {
-  width: 60%;
 }
 
 .min-w-max {
@@ -1346,8 +1302,24 @@ input:checked + .toggle-bg {
   min-width: max-content;
 }
 
+.min-w-full {
+  min-width: 100%;
+}
+
 .max-w-full {
   max-width: 100%;
+}
+
+.max-w-fit {
+  max-width: -webkit-fit-content;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+}
+
+.max-w-max {
+  max-width: -webkit-max-content;
+  max-width: -moz-max-content;
+  max-width: max-content;
 }
 
 .flex-1 {
@@ -1426,16 +1398,8 @@ input:checked + .toggle-bg {
   grid-template-columns: repeat(7, minmax(0, 1fr));
 }
 
-.flex-row {
-  flex-direction: row;
-}
-
 .flex-col {
   flex-direction: column;
-}
-
-.flex-wrap {
-  flex-wrap: wrap;
 }
 
 .items-start {
@@ -1498,19 +1462,14 @@ input:checked + .toggle-bg {
   border-radius: 0.5rem;
 }
 
-.rounded-t-lg {
+.rounded-l-lg {
   border-top-left-radius: 0.5rem;
-  border-top-right-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
 }
 
 .rounded-r-lg {
   border-top-right-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
-}
-
-.rounded-l-lg {
-  border-top-left-radius: 0.5rem;
-  border-bottom-left-radius: 0.5rem;
 }
 
 .border {
@@ -1523,10 +1482,6 @@ input:checked + .toggle-bg {
 
 .border-b-4 {
   border-bottom-width: 4px;
-}
-
-.border-t-4 {
-  border-top-width: 4px;
 }
 
 .border-secondary {
@@ -1564,11 +1519,6 @@ input:checked + .toggle-bg {
   background-color: rgb(30 36 33 / var(--tw-bg-opacity));
 }
 
-.bg-darkTone {
-  --tw-bg-opacity: 1;
-  background-color: rgb(48 61 53 / var(--tw-bg-opacity));
-}
-
 .bg-gray-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
@@ -1598,16 +1548,6 @@ input:checked + .toggle-bg {
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }
 
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(240 82 82 / var(--tw-bg-opacity));
-}
-
-.bg-orange-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 138 76 / var(--tw-bg-opacity));
-}
-
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
 }
@@ -1626,21 +1566,6 @@ input:checked + .toggle-bg {
 
 .stroke-secondary {
   stroke: #3D7459;
-}
-
-.object-cover {
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.object-top {
-  -o-object-position: top;
-     object-position: top;
-}
-
-.object-left {
-  -o-object-position: left;
-     object-position: left;
 }
 
 .p-4 {
@@ -1664,16 +1589,6 @@ input:checked + .toggle-bg {
   padding-right: 1.5rem;
 }
 
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -1692,6 +1607,11 @@ input:checked + .toggle-bg {
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .pl-2 {
@@ -1846,12 +1766,6 @@ input:checked + .toggle-bg {
   opacity: 1;
 }
 
-.shadow-none {
-  --tw-shadow: 0 0 #0000;
-  --tw-shadow-colored: 0 0 #0000;
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -1920,14 +1834,6 @@ input:checked + .toggle-bg {
   transition-duration: 500ms;
 }
 
-.duration-150 {
-  transition-duration: 150ms;
-}
-
-.duration-\[700\] {
-  transition-duration: 700;
-}
-
 .duration-\[700ms\] {
   transition-duration: 700ms;
 }
@@ -1942,26 +1848,6 @@ input:checked + .toggle-bg {
 
 .hover\:translate-x-4:hover {
   --tw-translate-x: 1rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:translate-x-2:hover {
-  --tw-translate-x: 0.5rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:rotate-45:hover {
-  --tw-rotate: 45deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:rotate-6:hover {
-  --tw-rotate: 6deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:-rotate-6:hover {
-  --tw-rotate: -6deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -2019,17 +1905,6 @@ input:checked + .toggle-bg {
 .hover\:text-gray-600:hover {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
-}
-
-.hover\:shadow-lg:hover {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.hover\:shadow-black\/20:hover {
-  --tw-shadow-color: rgb(0 0 0 / 0.2);
-  --tw-shadow: var(--tw-shadow-colored);
 }
 
 .focus\:outline-none:focus {
@@ -2180,24 +2055,12 @@ input:checked + .toggle-bg {
     margin-top: 1.5rem;
   }
 
-  .md\:mt-12 {
-    margin-top: 3rem;
-  }
-
   .md\:h-4 {
     height: 1rem;
   }
 
-  .md\:h-1\/2 {
-    height: 50%;
-  }
-
   .md\:w-2\/3 {
     width: 66.666667%;
-  }
-
-  .md\:flex-col {
-    flex-direction: column;
   }
 
   .md\:text-center {
@@ -2223,9 +2086,18 @@ input:checked + .toggle-bg {
     font-size: 1.5rem;
     line-height: 2rem;
   }
+
+  .md\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
 }
 
 @media (max-width: 765px) {
+  .sm\:visible {
+    visibility: visible;
+  }
+
   .sm\:mx-auto {
     margin-left: auto;
     margin-right: auto;
@@ -2239,12 +2111,12 @@ input:checked + .toggle-bg {
     margin-top: 1rem;
   }
 
-  .sm\:mt-2 {
-    margin-top: 0.5rem;
-  }
-
   .sm\:mb-4 {
     margin-bottom: 1rem;
+  }
+
+  .sm\:block {
+    display: block;
   }
 
   .sm\:flex {
@@ -2267,12 +2139,20 @@ input:checked + .toggle-bg {
     width: 100%;
   }
 
+  .sm\:w-5\/6 {
+    width: 83.333333%;
+  }
+
   .sm\:flex-col {
     flex-direction: column;
   }
 
   .sm\:text-center {
     text-align: center;
+  }
+
+  .sm\:text-start {
+    text-align: start;
   }
 
   .sm\:text-3xl {
@@ -2336,10 +2216,6 @@ input:checked + .toggle-bg {
     height: 0.5rem;
   }
 
-  .xs\:h-1\/4 {
-    height: 25%;
-  }
-
   .xs\:h-12 {
     height: 3rem;
   }
@@ -2392,6 +2268,18 @@ input:checked + .toggle-bg {
 
   .bruh\:hidden {
     display: none;
+  }
+
+  .bruh\:w-1\/2 {
+    width: 50%;
+  }
+
+  .bruh\:w-3\/4 {
+    width: 75%;
+  }
+
+  .bruh\:text-center {
+    text-align: center;
   }
 
   .bruh\:text-xl {
